--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
                     <p>Ваши товары</p>
                     <div id="productsListBox">
                         <div id="shopping_cart">
-                            <ul id="product_list">
+                            <ul id="product_ul2">
                             </ul>
-                            <p class="add">Добавить</p>
                         </div>
                         <hr>
-                        <p id="resultSum">Итог: 0₽</p>
+                        <p id="resSum">Итог: 0₽</p>
                     </div>
                     <input type="text" placeholder="Имя" name="nameReq">
                     <input type="text" placeholder="Фамилия" name="lastNameReq">
@@ -164,15 +163,15 @@
                                 <div id="box_param">
                                     <div id="box_type">
                                         <label for="">обычный</label>
-                                        <input id="ord_box" class="boxType" value="oridnary" type="radio" name="type_box">
+                                        <input id="ord_box" class="boxType" value="обычный" type="radio" name="type_box">
                                         <label for="">премиум</label>
-                                        <input id="prem_box" class="boxType" value="premium" type="radio" name="type_box">
+                                        <input id="prem_box" class="boxType" value="премиум" type="radio" name="type_box">
                                     </div>
                                     <div id="box_size">
                                         <label for="">маленький</label>
-                                        <input id="small_box" class="boxSize" value="small" type="radio" name="size_box">
+                                        <input id="small_box" class="boxSize" value="маленький" type="radio" name="size_box">
                                         <label for="">большой</label>
-                                        <input id="big_box" class="boxSize" value="big" type="radio" name="size_box">
+                                        <input id="big_box" class="boxSize" value="большой" type="radio" name="size_box">
                                     </div>
                                 </div>
                                 <button class="addingButton" id="addButton">добавить</button>
