--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                     <img class="info_box" src="icons/info_icon-icons.com_71167.png">
                     <img class="box_img" src="icons/258500.png" alt="">
                     <div class="info_text">
-                        <p class="box_title">Стиль </p>
-                        <p class="box_price">от 999₽</p>
+                        <p class="box_title">Стиль</p>
+                        <p class="box_price">от 1999</p>
                     </div>
                 <button class="add_to_cart">В корзину</button>
                 </div>
@@ -85,35 +85,8 @@
                     <img class="info_box" src="icons/info_icon-icons.com_71167.png">
                     <img class="box_img" src="icons/258500.png" alt="">
                     <div class="info_text">
-                        <p class="box_title">Стиль </p>
-                        <p class="box_price">от 999₽</p>
-                    </div>
-                <button class="add_to_cart">В корзину</button>
-                </div>
-                <div class="product">
-                    <img class="info_box" src="icons/info_icon-icons.com_71167.png">
-                    <img class="box_img" src="icons/258500.png" alt="">
-                    <div class="info_text">
-                        <p class="box_title">Стиль </p>
-                        <p class="box_price">от 999₽</p>
-                    </div>
-                <button class="add_to_cart">В корзину</button>
-                </div>
-                <div class="product">
-                    <img class="info_box" src="icons/info_icon-icons.com_71167.png">
-                    <img class="box_img" src="icons/258500.png" alt="">
-                    <div class="info_text">
-                        <p class="box_title">Дети 90-х </p>
-                        <p class="box_price">от 999₽</p>
-                    </div>
-                <button class="add_to_cart">В корзину</button>
-                </div>
-                <div class="product">
-                    <img class="info_box" src="icons/info_icon-icons.com_71167.png">
-                    <img class="box_img" src="icons/258500.png" alt="">
-                    <div class="info_text">
-                        <p class="box_title">Дети 90-х </p>
-                        <p class="box_price">от 999₽</p>
+                        <p class="box_title">Дети 90-х</p>
+                        <p class="box_price">от 1999</p>
                     </div>
                 <button class="add_to_cart">В корзину</button>
                 </div>
@@ -122,7 +95,7 @@
                     <img class="box_img" src="icons/258500.png" alt="">
                     <div class="info_text">
                         <p class="box_title">Характер</p>
-                        <p class="box_price">от 2999₽</p>
+                        <p class="box_price">от 1999</p>
                     </div>
                 <button class="add_to_cart">В корзину</button>
                 </div>
@@ -130,8 +103,8 @@
                     <img class="info_box" src="icons/info_icon-icons.com_71167.png">
                     <img class="box_img" src="icons/258500.png" alt="">
                     <div class="info_text">
-                        <p class="box_title">Характер</p>
-                        <p class="box_price">от 2999₽</p>
+                        <p class="box_title">Для милых дам</p>
+                        <p class="box_price">от 1999</p>
                     </div>
                 <button class="add_to_cart">В корзину</button>
                 </div>
@@ -139,8 +112,8 @@
                     <img class="info_box" src="icons/info_icon-icons.com_71167.png">
                     <img class="box_img" src="icons/258500.png" alt="">
                     <div class="info_text">
-                        <p class="box_title">Характер</p>
-                        <p class="box_price">от 2999₽</p>
+                        <p class="box_title">Уютный дом</p>
+                        <p class="box_price">от 1999</p>
                     </div>
                 <button class="add_to_cart">В корзину</button>
                 </div>
@@ -148,8 +121,8 @@
                     <img class="info_box" src="icons/info_icon-icons.com_71167.png">
                     <img class="box_img" src="icons/258500.png" alt="">
                     <div class="info_text">
-                        <p class="box_title">Характер</p>
-                        <p class="box_price">от 2999₽</p>
+                        <p class="box_title">Турист</p>
+                        <p class="box_price">от 1999</p>
                     </div>
                 <button class="add_to_cart">В корзину</button>
                 </div>
@@ -161,12 +134,6 @@
                         <div id="window_block">
                             <form id="adding_form" role="form">
                                 <div id="box_param">
-                                    <div id="box_type">
-                                        <label for="">обычный</label>
-                                        <input id="ord_box" class="boxType" value="обычный" type="radio" name="type_box">
-                                        <label for="">премиум</label>
-                                        <input id="prem_box" class="boxType" value="премиум" type="radio" name="type_box">
-                                    </div>
                                     <div id="box_size">
                                         <label for="">маленький</label>
                                         <input id="small_box" class="boxSize" value="маленький" type="radio" name="size_box">
