--- a/index.html
+++ b/index.html
@@ -145,13 +145,18 @@
         <div id="box_type">
             <p id="close_id" class="close">X</p>
                 <div id="types">
-                    <label for="">Обычный</label>
-                    <input type="radio" name="type" value="обычный">
-                    <label for="">Большой</label>
-                    <input type="radio" name="type" value="большой">
+                    <div>
+                        <label for="">Обычный(1999₽)</label><br>
+                        <input type="radio" name="type" value="обычный">
+                    </div>
+                    <div>
+                        <label for="">Большой(3999₽)</label><br>
+                        <input type="radio" name="type" value="большой">
+                    </div>
                 </div>
                 <br>
                 <div id="sizes">
+                    <p>Выберите размер футболки</p>
                     <label for="">S</label>
                     <input type="radio" name="size" value="S">
                     <label for="">M</label>
